Fix the vert. alignment of text beside images

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -72,6 +72,8 @@ img {
   border-width: 0px;
   /* fix bootstrap style which makes images small in tables: */
   max-width: 999px;
+  /* fix bootstrap vertical-align: middle */
+  vertical-align: bottom;
 }
 
 #heading {
